# realtime_trees

./: .gitignore  README.md
.devcontainer/: devcontainer.json
docker/: .env  Dockerfile  docker-compose.yml
realtime_trees/: requirements.txt  setup.py
realtime_trees/notebooks/: offline_from_g2o.ipynb  offline_from_pcd.ipynb
realtime_trees/src/realtime_trees/: __init__.py  circle.py  clustering.py  terrain.py  tree.py  tree_manager.py
realtime_trees/src/realtime_trees/utils/: __init__.py  dataclasses.py  distances.py  gnss.py  matrix_calc.py  meshing.py  ros_proxys.py  timing.py
realtime_trees/src/tools/: REAME.md  requirements.txt  tree_annotator.py  tree_manager_inspector.py
realtime_trees_msgs/: CMakeLists.txt  package.xml
realtime_trees_msgs/msg/: Circle.msg  Tree.msg  TreeManager.msg
realtime_trees_msgs/srv/: CustomString.srv
realtime_trees_ros/: package.xml  setup.cfg  setup.py
realtime_trees_ros/config/: payload_accumulator_config_treescope.yaml  realtime_trees_config_treescope.yaml
realtime_trees_ros/launch/: payload_accumulator_treescope.launch.py  realtime_trees_treescope.launch.py  view_rviz.launch.py
realtime_trees_ros/realtime_trees_ros/: __init__.py  payload_accumulator.py  payload_accumulator_node.py  realtime_trees.py  realtime_trees_node.py  utils.py  vilens_posegraph_republisher.py
realtime_trees_ros/rviz/: realtime_trees.rviz
