<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>realtime_trees_ros</name>
  <version>0.0.0</version>
  <description>ROS 2 wrapper for real-time tree reconstruction</description>
  <maintainer email="l.freissmuth@tum.de">Leonard Freissmuth</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-open3d</exec_depend>
  <exec_depend>python3-pandas</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>realtime_trees</exec_depend>
  <exec_depend>realtime_trees_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>
  <exec_depend>shape_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>vilens_slam_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
